--- a/gb/news2008_2.md
+++ b/gb/news2008_2.md
@@ -1,4 +1,8 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ukize233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ukize233/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ukize233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ukize233/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ukize233/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ukize233/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ukize233/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11773142.md#1" target="_blank">糖让你体内发炎、免疫下降！简单4招成功戒糖</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11773142.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/cut-down-sugar_730747618-150x120.jpg" align ="left"></a>糖瘾的常见症状包括：短期记忆力差、静不下来、失眠、忧郁焦虑、嘴馋——你可有似曾相识的感受？当体内糖分过多，容易造成发炎、免疫系统损伤，甚至增加癌症风险。戒糖可以帮助身体恢复平衡，让你的身体发生巨大变化。如何戒糖？1. 早餐大改造。早餐吃甜的，绝对会让你一整天都想吃糖。如果你想吃甜的，那就替换为有天然甜味的食物。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 2:43 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11762783.md#1" target="_blank">爱猫失踪6年在圣诞节找到 主人流泪：这是奇迹！</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11762783.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2ce316d5b17cddb02445a709399c0f2f-150x120.jpg" align ="left"></a>一只失踪6年、今年19岁高龄的老猫，在圣诞节前夕回到主人的怀抱中，本以为已经永远失去它的主人，高兴得感动流泪，并称这是一个圣诞奇迹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 2:19 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11762860.md#1" target="_blank">3岁姊姊第一次见妹妹 深情告白：从此不让你离开</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11762860.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/24fdcc75e2afd314cf42786f54a5b4c5-150x120.jpg" align ="left"></a>可记得第一次见到刚生出来的弟妹时，家中的孩子或自己做何反应？美国一个3岁的小姊姊第一次见到妹妹，不但温柔地把妹妹紧抱在怀中，更说了一句极深情、窝心的告白；让很多网友看得暖呼呼的，直呼这是见过最甜蜜的姊姊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 2:10 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11773584.md#1" target="_blank">善用收纳小巧思  浴室舒适度大提升</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11773584.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e759e72a8b1df9_ttl7daycGF_shutterstock_784953103-150x120.jpg" align ="left"></a>很多人觉得浴室的配置，只要简单就可以，不需要花太多心思。然而，我们不一定每天使用厨房、客厅或其他空间，但却一定会使用浴室。只要花点小巧思，就可以让浴室整齐明亮，慰劳自己一整天的辛苦与劳碌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 1:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11773663.md#1" target="_blank">如何清洗羽绒衣？清洁烘干技巧大公开</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11773663.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/03/shutterstock_719425375-150x120.jpg" align ="left"></a>正确清洗羽绒衣，比想像中更简单。只要用对方法，清洗起来一点也不费劲，很快就可让衣物恢复干净蓬松。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 1:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11773742.md#1" target="_blank">美国男子的麦当劳汉堡变木乃伊 放20年不坏</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11773742.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-82048485-150x120.jpg" align ="left"></a>美国犹他州一名男子在20年前买的麦当劳汉堡，存放到现在仍未腐烂，看起来仍相当新鲜，仿佛变成了木乃伊。他将这个举世无双的汉堡称为“世界上最长寿的汉堡”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 1:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11772874.md#1" target="_blank">头晕易疲劳是血虚？中医有4个补血妙方</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11772874.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/enrich-blood-_379121698-150x120.jpg" align ="left"></a>中医说的“血虚”和西医的“贫血”（anemia）非常不同。血虚可能的症状有：脸色较苍白或萎黄，容易头晕，常常觉得。有血虚问题，就得补血。如何补血呢？调整饮食习惯及生活作息当然是首要的。而中医自古有很多补血的妙方。四物汤是常见的补血药方，许多更有效的补血药方，也是以四物汤为基底叠加而成，例如八珍汤及十全大补汤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 4:39 AM			</td></tr>
@@ -33,13 +37,6 @@
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11766968.md#1" target="_blank">武汉不明肺炎 专家：疫情越封锁越难防疫</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11766968.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1881582-150x120.jpg" align ="left"></a>从去年12月起，武汉爆发“不明原因的病毒性肺炎”，在此次疫情中，中共官方似如往次疫情爆发般，再度意图隐瞒，且被迫曝光后只公开部分消息。这导致了一些民众对于SARS再现的恐慌，而另一些民众却毫无防范概念。中共对疫情的隐瞒，究竟会带来哪些危机？如何才是正当的防疫之道？隐瞒疫情消息，给国民安全带来极大风险：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 6:30 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/31/n11757487.md#1" target="_blank">作弄女儿！爸爸送“最糟圣诞礼”女儿反应超意外</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/31/n11757487.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1f2cfd56e8e91216f2493070b3fbd8a4-150x120.jpg" align ="left"></a>一个年轻的父亲想作弄小女儿，看看如果他给出“最糟糕的圣诞节礼物”时，女儿的反应如何？ 但令父亲惊讶的是，这位2岁小女孩以一种非同寻常的方式回应。小女孩同时也逗乐了很多网友，致使视频在Twitter上风靡一时。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:54 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/31/n11757576.md#1" target="_blank">她95次交换礼物中大奖 秘密圣诞老人是比尔?盖茨</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/31/n11757576.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/children-girls-family-gifts-150x120.jpg" align ="left"></a>一位33岁的美国妇女当她参加第95次参加耶诞节交换礼物时中大奖，17日，她终于得到比尔?盖茨（Bill Gates）成为她的“秘密圣诞老人”（Secret Santa），他寄给谢尔比重达81磅的书籍、零食和书呆子纪念品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:37 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/30/n11754898.md#1" target="_blank">帮新生宝宝戴“尤达帽”萌照热传 宠物帽也很可爱</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/30/n11754898.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a3c28e08fbb465e964d5a8bafa2c5f18-150x120.jpg" align ="left"></a>匹兹堡的一家医院正在为他们制作的可爱手工制作的Baby Yoda帽子成为头条新闻，他们在这个假日季节为新生婴儿打扮。一系列照片在网路上流传。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 1:48 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/30/n11754829.md#1" target="_blank">2年不见 儿扮“圣诞老人”现身 警察爸抱紧处理</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/30/n11754829.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4a2a1fc1e6e08204121a32b094ce136b-150x120.jpg" align ="left"></a>为了想给在德州丹顿县当警察的父亲查德?柯克（Chad Kirk）一个惊喜，克里斯决定比预期提早4个月回家过圣诞节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 1:36 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11767033.md#1" target="_blank">新手也养得活 10种容易照顾的室内植物</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11767033.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e692420823ee47_ttl7day4Ns_shutterstock_791834743-150x120.jpg" align ="left"></a>对忙碌的现代人而言，生活有时相当紧凑，一不小心就忘了该浇多少水，该施多少肥。如果要出外旅行，更需要担心它们有没有人能照料？其实，有些植物本来就生长在艰困的环境之中，面对大自然的考验时，旺盛的生命力让它们坚韧的繁衍了千万年。如果你总是难把植栽照料好，或许这些养不死的室内植物，就是最适合你的“绿色宠物”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 1:10 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11767066.md#1" target="_blank">车评：起亚之魂 2020 Kia Soul GT-Line</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11767066.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2020_Kia_Soul_GT_01-150x120.jpg" align ="left"></a>Kia的新一代Soul，早在2018年洛杉矶车展上已展出，而笔者在2019年温哥华车展上也碰到了，但真正可以将它在开在路上，这周是首次有这个机会。
-
-
-一向以来，Kia Soul的独特“盒形”设计，除了使人印象深刻，拥有“可爱”的特质，其实用性也是非常高，因为是方盒形，所以内里空间大。全新一代的Kia Soul.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 12:36 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11767534.md#1" target="_blank">汽车维修问与答：引擎漏油的原因</a><br></h3>汽车维修问与答
 
 读者James问：李师傅您好！我有一辆98年的本田雅阁两门跑车，已有20多年历史，但行驶平稳，从未有大毛病，不舍得放弃。近几个月发现引擎油缓慢漏出，外壳被油包裹，两次送去普通车行清洗引擎外壳后，都未发现任何问题。到本田经销商检查后说，可能需更换Oil Pump Seal和Distributor，需.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:14 PM			</td></tr>
